
Numbers prepended with "0." refer to the old, unavailable
Trac ticket list.

0.25
 * Use Mutagen for ASF/WMA and MP4 support.
 * Add IsPlaying and GetPosition to the D-Bus API. (Mickael Royer)
 * Default "No Cover" image. (Jakub Steiner)
 * Add --unfilter to reset browser filters.
 * Sort --enqueued files, and add --unqueue.
 * Basic SPC (SNES ROM audio) support.
 * Numerous bug fixes, especially in media device handling.

0.24 - One wonders if our conversation today would be an appropriate epitaph.
 * Media device (iPod and UMS so far) support. (Markus Koller)
 * Delete removes songs from the queue. (sciyoshi)
 * Per-browser window memory.
 * Use Mutagen for WavPack and Musepack support.
 * Keep filenames when given invalid patterns. (Markus Koller)
 * Don't duplicate performers in ~performers. (Martin Bergström)
 * Python 2.5 and GTK+ 2.10 compatibility.
 * Fix Rename Files support on MP4 files.
 * New Romanian translation, by Mugurel Tudor.
 * New Slovak translation, by Lukáš Lalinský.
 * Updated translations:
   * Traditional Chinese, by Hsin-lin Cheng.
   * Japanese, by Yasushi Iwata.
   * Galician and Spanish, by Johám-Luís Miguéns Vila.
   * Finnish, by Jari Rahkonen.
   * Hebrew, by Roee Haimovich.
   * Polish, by Tomasz Torcz
   * French, by Guillaume Ayoub.
   * German, by Rüdiger Arp.

0.23.1 - UNPOPULAR LIFE GOALS
 * Multivalued tag renaming.
 * Fix crash when ~/.gtk-bookmarks is not present.
 * Disable 'title' completion. (hopefully temporarily)
 * Parse "performer:role" tags and offer a ~performers synthetic tag.
 * Updated Swedish translation, by Erik Christiansson.

0.23 - THE NARRATIVE OF LIFE.
 * Bug Fixes:
   * Updated files no longer incorrectly appear in the paned browser.
   * Disambiguate 'filename' string for translation.
   * Hide unreadable files in Ex Falso.
   * Avoid (harmless) race condition when filling album list.
 * "Select All Subfolders" menu item when browsing directories.
   (thanks to Alexandre Passos).